--- a/house-service/src/main/resources/application.properties
+++ b/house-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 data.filepath=/houses.dat
+
+netifi.proteus.broker.hostname=localhost
+netifi.proteus.broker.port=8001
+
+netifi.proteus.accesskey=9007199254740991
+netifi.proteus.accesstoken=kTBDVtfRBO4tHOnZzSyY5ym2kfY=
