--- a/house-service/src/main/resources/application.properties
+++ b/house-service/src/main/resources/application.properties
@@ -2,8 +2,11 @@ data.filepath=/houses.dat
 
 netifi.proteus.broker.hostname=localhost
 netifi.proteus.broker.port=8001
+netifi.proteus.ssl.disabled=true
 
 netifi.proteus.access.key=9007199254740991
 netifi.proteus.access.token=kTBDVtfRBO4tHOnZzSyY5ym2kfY=
 
 netifi.proteus.group=house.services.dataservices
+netifi.proteus.destination=service
+netifi.proteus.pool-size=1
