--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,7 @@ subprojects {
     ext {
         rsocketRpcVersion = '0.2.0'
         protobufVersion = '3.6.1'
-        proteusVersion = '0.9.0'
-        springBootDependenciesVersion = '2.0.4.RELEASE'
+        springBootVersion = '2.0.4.RELEASE'
         proteusBootVersion='0.4.0'
     }
 
